[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/mainfont.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/comedian.png" type="Texture" id=2]
[ext_resource path="res://assets/clockface.png" type="Texture" id=3]
[ext_resource path="res://assets/speechbubble.png" type="Texture" id=4]
[ext_resource path="res://src/Letter.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Main.gd" type="Script" id=6]
[ext_resource path="res://assets/comedian2.png" type="Texture" id=7]
[ext_resource path="res://assets/clock2.ogg" type="AudioStream" id=8]
[ext_resource path="res://src/Splash.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/clock.ogg" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -140.0
custom_fonts/font = SubResource( 1 )
text = "4 Out Of 5 Dogs!"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_right = -10.0
custom_fonts/font = SubResource( 2 )
text = "v0.3"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 120.0
margin_bottom = -320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="Control" parent="Middle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockFace" type="Sprite" parent="Middle/Center"]
position = Vector2( 40, -140 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="ClockHand" type="Node2D" parent="Middle/Center"]
position = Vector2( 40, -140 )
rotation = -1.5708

[node name="Rect" type="ColorRect" parent="Middle/Center/ClockHand"]
margin_left = -10.0
margin_top = -10.0
margin_right = 210.0
margin_bottom = 10.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Comedian" type="Sprite" parent="Middle/Center"]
position = Vector2( -170, 250 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Comedian2" type="Sprite" parent="Middle/Center"]
visible = false
position = Vector2( -170, 180 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="SpeechBubble" type="Sprite" parent="Middle/Center"]
position = Vector2( 140, 280 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Middle/Center/SpeechBubble"]
margin_left = -105.0
margin_top = -76.0
margin_right = 168.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -280.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="Control" parent="Controls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -580.0
margin_bottom = -580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButton" type="Button" parent="Controls/Center"]
margin_left = -200.0
margin_top = 580.0
margin_right = 200.0
margin_bottom = 700.0
custom_fonts/font = SubResource( 4 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Letter1" parent="Controls/Center" instance=ExtResource( 5 )]
position = Vector2( -280, 500 )

[node name="Letter2" parent="Controls/Center" instance=ExtResource( 5 )]
position = Vector2( -200, 500 )

[node name="Letter3" parent="Controls/Center" instance=ExtResource( 5 )]
position = Vector2( -120, 500 )

[node name="Letter4" parent="Controls/Center" instance=ExtResource( 5 )]
position = Vector2( -40, 500 )

[node name="Letter5" parent="Controls/Center" instance=ExtResource( 5 )]
position = Vector2( 40, 500 )

[node name="Letter6" parent="Controls/Center" instance=ExtResource( 5 )]
position = Vector2( 120, 500 )

[node name="Letter7" parent="Controls/Center" instance=ExtResource( 5 )]
position = Vector2( 200, 500 )

[node name="Letter8" parent="Controls/Center" instance=ExtResource( 5 )]
position = Vector2( 280, 500 )

[node name="Countdown" type="Node2D" parent="."]

[node name="Countdown" type="AudioStreamPlayer" parent="Countdown"]
stream = ExtResource( 10 )

[node name="Countdown2" type="AudioStreamPlayer" parent="Countdown"]
stream = ExtResource( 8 )

[node name="Splash" parent="." instance=ExtResource( 9 )]
visible = false
[connection signal="pressed" from="Controls/Center/ActionButton" to="." method="_on_ActionButton_pressed"]
